[tool.poetry]
name = "gbzr-backend"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "gbzr_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-dotenv = "^1.4.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"