[tool.poetry]
name = "gbzr-backend"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "gbzr_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pyjwt = "^2.6.0"
django-environ = "^0.10.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.130.4"}
strawberry-graphql-django = "^0.5.1"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"